# AmbroflowEngine

./: demo_direct.py  demo_min.py  demo_scape.py  diag.py  mini_smoke.py  play.bat  play.ps1  pyproject.toml  requirements.txt  smoke_gl.py  update.bat
ambroflow/: __init__.py  __main__.py
ambroflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ambroflow/alchemy/: __init__.py  alchemy.ko  laboratory.py  physics_integration.py  system.py
ambroflow/chargen/: __init__.py  data.py  screens.py
ambroflow/dialogue/: __init__.py  loader.py  render.py  selector.py
ambroflow/dungeon/: __init__.py  generator.py  registry.py  runtime.py
docs/: book7_narrative_architecture.md
scripts/: preview_scenes.py
tests/: test_alchemy.py  test_alchemy_calendar.py  test_alchemy_laboratory.py  test_atlas_compiled.py  test_bok_compiled.py  test_calendar.py  test_chargen.py  test_dialogue.py  test_dialogue_render.py  test_dialogue_selector.py  test_divine_encounter.py  test_dream_scene.py  test_dungeon_generator.py  test_home_zone.py  test_journal.py  test_key_registry.py  test_keyring.py  test_klob.py  test_ko.py  test_ko_tension.py  test_kobra_zone_loader.py  test_location_rooms.py  test_map_discovery.py  test_mesh_compiled.py  test_negaya.py  test_opening_sequence.py  test_render.py  test_renderer_compiled.py  test_samosmyr_bridge.py  test_sanity.py  test_scene_runner.py  test_skills.py  test_state_machine.py  test_tile_trace.py  test_void_wraith.py  test_world_combat.py  test_world_loaders.py  test_zone_mesh_builder.py  test_zones_lapidus.py
(+245 files in other folders)
