[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ambroflow"
version = "0.1.0"
description = "Ambroflow Engine — KLGS series game runtime"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ambroflow*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
